SAKIII-4459 My Library has display issue for items with long description
Squashed commit of the following:

commit f4e844694bbaed0b8d75279d95f15711c4b841da
Merge: a380946 58b64fe
Author: Chris Roby <christopher.roby@gmail.com>
Date:   Wed Dec 7 11:47:18 2011 -0800

    Merge branch 'SAKIII-4459' of http://github.com/bp323/3akai-ux into bp323-SAKIII-4459

commit 58b64fefba85bd06bf2f8c737c66a789e34ce56a
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Wed Dec 7 11:43:06 2011 +0000

    SAKIII-4459 Consolidate my library css more

commit 4d253f3f6bdb054b721592ae18361e55f88d4381
Merge: e878271 f3f9ba8
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Wed Dec 7 11:37:42 2011 +0000

    Merge remote-tracking branch 'origin/master' into SAKIII-4459

commit e87827165f217863f42e41ecaff57d160a0dd260
Author: Bert Pareyn <bp323@caret.cam.ac.uk>
Date:   Wed Dec 7 10:08:19 2011 +0000

    SAKIII-4459 My Library has display issue for items with long description

--- a/devwidgets/mylibrary/css/mylibrary.css
+++ b/devwidgets/mylibrary/css/mylibrary.css
@@ -43,7 +43,6 @@
 .mylibrary_add_content_button {margin-top: 0px !important;}
 
 .mylibrary_item_left_filler{margin:1px 8px 0 0;display: inline;float: left;height: 25px;width: 17px;}
-.mylibrary_item_right{margin-left:3px; float:left;}
 .mylibrary_item_mimetype {font-size:smaller;white-space:pre;text-transform:uppercase;}
 .mylibrary_item_by {padding:3px 0;font-size:11px;}
 .mylibrary_item_description{margin:0px;font-size:.90em;padding:6px 0; word-wrap: break-word;}
@@ -111,7 +110,6 @@
 .mylibrary_meta .s3d-no-results-container {font-style:normal;}
 
 #mylibrary_items.s3d-search-results-grid .mylibrary_item.s3d-search-result a img {position:inherit;}
-#mylibrary_items.s3d-search-results-grid .s3d-search-result-right {margin:35px 0 0 7px;width:130px;}
 #mylibrary_items.s3d-search-results-grid .s3d-search-result-user-functions .mylibrary_item_left_filler {width:auto;}
 #mylibrary_items.s3d-search-results-grid .s3d-search-result-user-functions .mylibrary_item_left_filler input {float:left;margin-right:13px;margin-top:0;}
 #mylibrary_items.s3d-search-results-grid .s3d-search-result-user-functions .mylibrary_item_left_filler button {float:left;margin-top:1px;}
